Color Picker, sample merged. #48000

Closed
opened 2016-03-30 07:37:23 +02:00 by Paul · 4 comments

System Information
Operating system and graphics card
win7, gtx560

Blender Version
2.77 22a2853

Short description of error
If you sample color and do not move cursor it will act as sample merged is not checked.

Exact steps for others to reproduce the error
Sample color i texture paint mode. Check sample merged option.

  1. Then sample color while holding color sample shortcut and moving cursor with mouse/tablet.
  2. Sample color without changing cursor positon.

https://developer.blender.org/rBS0034765208f7b22077fdd75395eb5ebb2aeb8629

**System Information** Operating system and graphics card win7, gtx560 **Blender Version** 2.77 22a2853 **Short description of error** If you sample color and do not move cursor it will act as sample merged is not checked. **Exact steps for others to reproduce the error** Sample color i texture paint mode. Check sample merged option. 1. Then sample color while holding color sample shortcut and moving cursor with mouse/tablet. 2. Sample color without changing cursor positon. https://developer.blender.org/rBS0034765208f7b22077fdd75395eb5ebb2aeb8629
Author

Changed status to: 'Open'

Changed status to: 'Open'
Campbell Barton was assigned by Paul 2016-03-30 07:37:23 +02:00
Author

Added subscriber: @riceart

Added subscriber: @riceart

This issue was referenced by 93f107729c

This issue was referenced by 93f107729cf7ab650716f525f2af8cd2a780e56a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48000
No description provided.