Fix T48000: Eyedropper sample-merged ignored at first